duckdb/test/corpus/extensions.txt
================================================================================
DuckDB: INSTALL extension by name
================================================================================

INSTALL httpfs;

--------------------------------------------------------------------------------

(program
  (statement
    (install_statement
      (keyword_install)
      name: (identifier))))

================================================================================
DuckDB: INSTALL extension from URL
================================================================================

INSTALL spatial FROM 'https://example.com/ext';

--------------------------------------------------------------------------------

(program
  (statement
    (install_statement
      (keyword_install)
      name: (identifier)
      (keyword_from)
      source: (literal))))

================================================================================
DuckDB: LOAD extension
================================================================================

LOAD spatial;

--------------------------------------------------------------------------------

(program
  (statement
    (load_statement
      (keyword_load)
      name: (identifier))))

================================================================================
DuckDB: INSTALL from community
================================================================================

INSTALL my_ext FROM community;

--------------------------------------------------------------------------------

(program
  (statement
    (install_statement
      (keyword_install)
      name: (identifier)
      (keyword_from)
      source: (identifier))))
